Bug fixed - Footer media icons falling underneath one another on small screens. Ammended using media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2059,7 +2059,8 @@ h1, h2 {
         width: 85%;
     }
     #footer_media {
-        width: 35%;
+        width: 40%;
+        text-align: center;
     }
     #classic_afternoon_tea {
         height: 30%;
